--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "three": "https://esm.sh/three@^0.182.0",
     "papaparse": "https://esm.sh/papaparse@^5.4.1",
-    "recharts": "https://esm.sh/recharts@^2.12.0"
+    "recharts": "https://esm.sh/recharts@^2.12.0",
+    "firebase/app": "https://esm.sh/firebase@10.13.1/app",
+    "firebase/auth": "https://esm.sh/firebase@10.13.1/auth",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
